# back-end-gaming

backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/model/: user_role.py  users.py
backend/app/repository/: auth_repo.py  base_repo.py  users.py
backend/app/service/: auth_service.py  users.py
